Melhorando a documentação do projeto